tests/test_files_pa3/errors/LocalVariableAssigmentFromFieldWithBadType.ic
class A {
		
	string a;
	void foo() {
		int a = a;
	}
	
	static void main(string[] args) { }
	
}